; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_inc_iu64.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_inc_iu64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"Unable to tcadbput\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i64)* @inc_iu64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inc_iu64(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  store i64 %11, i64* %9, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %34

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = call i8* @tcadbget(i8* %16, i32* %6, i32 4, i32* %8)
  store i8* %17, i8** %10, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %27

19:                                               ; preds = %15
  %20 = load i8*, i8** %10, align 8
  %21 = bitcast i8* %20 to i64*
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %7, align 8
  %24 = add nsw i64 %22, %23
  store i64 %24, i64* %9, align 8
  %25 = load i8*, i8** %10, align 8
  %26 = call i32 @free(i8* %25)
  br label %27

27:                                               ; preds = %19, %15
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @tcadbput(i8* %28, i32* %6, i32 4, i64* %9, i32 8)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %33, label %31

31:                                               ; preds = %27
  %32 = call i32 @LOG_DEBUG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %33

33:                                               ; preds = %31, %27
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %33, %14
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i8* @tcadbget(i8*, i32*, i32, i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @tcadbput(i8*, i32*, i32, i64*, i32) #1

declare dso_local i32 @LOG_DEBUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
